--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,8 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["pypy3.10", "3.9", "3.10", "3.11", "3.12"]    
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: install packages
         run: make install
       - name: lint
@@ -21,3 +28,6 @@ jobs:
         run: make format
       - name: deploy
         run: make deploy
+
+
+
